fix title on mobile display

--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ body {
   --btn-color: #09504e;
   --btn-hover-color: #6edad6b3;
 }
-/* status calss*/
+/* status class*/
 .btns input.active {
   background-color: var(--bg-color);
   color: var(--btn-color);
 }
 
 .outer-container {
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--bg-color);
   display: flex;
   flex-direction: column;
@@ -36,7 +36,7 @@ body {
   letter-spacing: 0.4rem;
   font-weight: bold;
   color: var(--label-color);
-  margin-bottom: 2rem;
+  margin: 0 auto;
 }
 
 .inner-container {
@@ -223,15 +223,15 @@ body {
     flex-direction: column;
     width: 85vw;
   }
+  .title {
+    margin-top: 1rem;
+  }
   .right-section {
     gap: 2rem;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .title {
-    margin-bottom: 1rem;
-  }
   .inner-container {
     flex-direction: column;
     width: 95vw;
